v1.3.4 flicker fix; ks icon loading fix; deselect all in sort.

--- a/res/styles.css
+++ b/res/styles.css
@@ -46,7 +46,7 @@ hr {
 .killicon-container {
   width: 80%;
   height: 500px;
-  background: #2b2724;
+  background: #24201b;
   border-bottom: 4px solid #feedd1;
   border-left: 4px solid #feedd1;
   border-right: 4px solid #feedd1;
@@ -77,7 +77,7 @@ hr {
   margin: 10px;
   background: #776b5f;
   padding: 10px;
-  border: 2px solid #f6d62b;
+  border: 2px solid #ffd700;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -107,7 +107,10 @@ hr {
 .list-item img {
   max-width: 100%;
 }
-
+.list-item:hover,
+.list-item img {
+  cursor: pointer;
+}
 .main {
   width: 80%;
   display: flex;
@@ -120,7 +123,7 @@ hr {
 }
 
 .in-main {
-  background: #2b2724;
+  background: #24201b;
   width: 20vw;
   color: #ebe5cf;
   padding: 20px;
@@ -156,11 +159,15 @@ input[type="number"] {
   display: flex;
   flex-direction: column;
 }
-
+.option-checkbox {
+  margin-bottom: 1em;
+  width: 2em;
+}
 .sort {
-  background: #2b2724;
+  background: #24201b;
   width: 80%;
   display: flex;
+  align-content: flex-start;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
@@ -186,13 +193,12 @@ input[type="number"] {
 .sort-type {
   width: 100%;
 }
-
-.sortable[data-sort="on"] {
+.sortable-style[data-sort="on"] {
   background-color: #776b5f;
-  border: 2px solid #f6d62b;
+  border: 2px solid #ffd700;
   transition: all linear 0.25s;
 }
-.sortable {
+.sortable-style {
   background-color: #1e1b18;
   border: 2px solid #554a0f;
   margin-top: 1em;
@@ -205,6 +211,9 @@ input[type="number"] {
   -ms-border-radius: 1em;
   -o-border-radius: 1em;
   transition: all linear 0.25s;
+}
+.sortable-style:hover {
+  cursor: pointer;
 }
 
 .canvas-container {
